--- a/pss.css
+++ b/pss.css
@@ -1,4 +1,102 @@
-iframe {
-	color: green;
-	background-color: yellow;
+html {
+   width:100%;
+   height:100%;
 }
+
+
+
+body {
+   margin: 0px;
+   padding: 0px;
+   font-size: 12px;
+   height: 100%;
+   width: 100%;
+   font: 82.5% Arial, Helvetica, sans-serif;
+   line-height:normal;
+   color: #222;
+}
+
+
+
+
+.error {
+   font-size: 12px;
+   font-weight: bold;
+   color: #990000;
+   text-decoration: none;
+   background-color: #FFCC99;
+   display: block;
+   margin: 20px 2px;
+   padding: 8px;
+   border: 1px solid #FF0000;
+   background-image: url(../images/errMsg.gif);
+   background-repeat: no-repeat;
+   background-position: 2px;
+   text-indent: 25px;
+}
+
+.message {
+   font-size: 12px;
+   font-weight: bold;
+   color: #FF9933;
+   text-decoration: none;
+   background-color: #FFFFCC;
+   margin: 20px 2px;
+   padding: 8px;
+   border: 1px solid #FFCC33;
+   background-image: url(../images/msg_icon.gif);
+   background-repeat: no-repeat;
+   background-position: 2px;
+   text-indent: 25px;
+}
+
+
+table {
+   text-align: left;
+   margin: 0 0 10px;
+}
+table td {
+   padding: 8px 10px 3px 5px;
+   vertical-align: top;
+}
+
+
+
+input, select {
+   font-family: "Lucida Grande", Tahoma, Verdana, Arial, Helvetica, sans-serif;
+   font-size: 12px;
+   font-weight: normal;
+   color: #333333;
+   text-decoration: none;
+   background-color: #FFFFFF;
+}
+.button {
+   font-family: "Lucida Grande", Tahoma, Verdana, Arial, Helvetica, sans-serif;
+   font-size: 12px;
+   font-weight: bold;
+   color: #FFFFFF;
+   background-color: #336699;
+   background-image: url(../images/buttonBg.gif);
+   background-repeat: repeat-x;
+   background-position: bottom;
+   height: 25px;
+   margin: 10px 20px 10px 0;
+}
+
+textarea {
+   margin: 0px 10px 0px 0px;
+}
+
+
+.button:hover {
+   font-family: "Lucida Grande", Tahoma, Verdana, Arial, Helvetica, sans-serif;
+   font-size: 12px;
+   font-weight: bold;
+   color: #FFFFFF;
+   background-color: #336699;
+   background-image: url(../images/buttonBgHover.gif);
+   background-repeat: repeat-x;
+   background-position: bottom;
+   height: 25px;
+}
+
