--- a/pss.css
+++ b/pss.css
@@ -13,7 +13,7 @@ body {
    width: 100%;
    font: 82.5% Arial, Helvetica, sans-serif;
    line-height:normal;
-   color: green;
+   color: #92c80e;
 }
 
 
