--- a/pss.css
+++ b/pss.css
@@ -11,7 +11,7 @@ body {
    font-size: 12px;
    height: 100%;
    width: 100%;
-   font: 82.5% Arial, Helvetica, sans-serif;
+   font: 82.5% Roboto, Helvetica, sans-serif;
    line-height:normal;
    color: #92c80e;
 }
