--- a/pss.css
+++ b/pss.css
@@ -7,12 +7,13 @@ html {
 
 
 body {
-   margin: 30px;
-   padding: 30px;
+   margin: 0px;
+   padding: 0px;
    font-size: 36px;
    height: 100%;
    width: 100%;
    font: 82.5% Roboto, Helvetica, sans-serif;
+   font-weight: bold;
    line-height:normal;
    color: #92c80e;
 }
