--- a/pss.css
+++ b/pss.css
@@ -12,7 +12,7 @@ body {
    font-size: 36px;
    height: 100%;
    width: 100%;
-   font: 82.5% Roboto, Helvetica, sans-serif;
+   font: Roboto, Helvetica, sans-serif;
    font-weight: bold;
    line-height:normal;
    color: #92c80e;
